# Omnivault

./: Cargo.toml  README.md
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/verify-worldid/: route.ts
apps/web/app/dashboard/: page.tsx
apps/web/app/vault/: page.tsx
apps/web/components/: DepositModal.tsx
apps/web/lib/: contracts.ts  near.ts  useVaultData.ts  useWorldId.ts  walletContext.tsx
contracts/chain_bridge/: Cargo.toml
contracts/chain_bridge/src/: lib.rs
contracts/strategy_manager/: Cargo.toml
contracts/strategy_manager/src/: lib.rs
contracts/vault_core/: Cargo.toml
contracts/vault_core/src/: lib.rs
contracts/wallet_core/: Cargo.toml
contracts/wallet_core/src/: lib.rs
relayer/: package-lock.json  package.json  tsconfig.json
relayer/src/: cache.ts  config.ts  ethereum.ts  mpc_signer.ts  near.ts  relayer.ts
