[package]
name = "vault_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=5.5.0"
borsh = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"

[dev-dependencies]
near-sdk = { version = "=5.5.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
